修改“父组件向子组件传递数据”

--- a/父组件向子组件传递数据/index.html
+++ b/父组件向子组件传递数据/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>父子组件通信</title>
+        <title>父组件向子组件传递数据</title>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     </head>
     <body>
